fixed dark mode button in navbar

--- a/post-it/src/App.css
+++ b/post-it/src/App.css
@@ -1,6 +1,6 @@
-* {
+/* * {
   /* box-sizing: border-box; */
-  margin: 0;
+  /* margin: 0;
   padding: 0;
 }
 
@@ -11,5 +11,6 @@ body {
 
 .App {
   text-align: center;
-}
+} */
+
 
